[gd_scene load_steps=3 format=3 uid="uid://bebvc2datqp85"]

[ext_resource type="Script" path="res://menu_overlay.gd" id="1_biga6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0w3pk"]
bg_color = Color(0.115, 0.3, 0, 1)

[node name="MenuElement" type="PanelContainer"]
custom_minimum_size = Vector2(320, 0)
size_flags_horizontal = 0
size_flags_vertical = 8
script = ExtResource("1_biga6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 2
mouse_filter = 2
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="LabelTarget" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Editing:"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Anchor"

[node name="Option_Anchor" type="OptionButton" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Position"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
text = "X"
horizontal_alignment = 1

[node name="Spin_PosX" type="SpinBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -3000.0
max_value = 3000.0
rounded = true
allow_greater = true
allow_lesser = true
suffix = "px"

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
text = "Y"
horizontal_alignment = 1

[node name="Spin_PosY" type="SpinBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -3000.0
max_value = 3000.0
rounded = true
allow_greater = true
allow_lesser = true
suffix = "px"

[node name="Label3" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Size"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer2"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
text = "W"
horizontal_alignment = 1

[node name="Spin_SizeW" type="SpinBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = -3000.0
max_value = 3000.0
rounded = true
allow_greater = true
allow_lesser = true
suffix = "px"

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer2"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
text = "H"
horizontal_alignment = 1

[node name="Spin_SizeH" type="SpinBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = -3000.0
max_value = 3000.0
rounded = true
allow_greater = true
allow_lesser = true
suffix = "px"

[node name="ParamContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ButtonFinish" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_0w3pk")
text = "Finish"
